# embedlite-components

./: EmbedLiteBinComponents.manifest  EmbedLiteJSComponents.manifest  Makefile.am  autogen.sh  configure.ac  embedlite-components.pro  gencppid.pl  link_to_system.sh
chromehelper/: EmbedChromeListener.cpp  EmbedChromeListener.h  EmbedChromeManager.cpp  EmbedChromeManager.h  Makefile.am  nsEmbedChromeModule.cpp
debian/: README.Debian  README.Fremantle  changelog  control  embedlite-components.install  rules
history/: EmbedHistoryListener.cpp  EmbedHistoryListener.h  Makefile.am  Makefile.in.moz  nsEmbedHistoryModule.cpp
jscomps/: AboutRedirector.js  AlertsService.js  ContentPermissionPrompt.js  DownloadManagerUI.js  EmbedLiteConsoleListener.js  EmbedLiteErrorPageHandler.js  EmbedLiteFaviconService.js  EmbedLiteGlobalHelper.js  EmbedLiteJSComponents.manifest  EmbedLiteSearchEngine.js  EmbedLiteSyncService.js  EmbedLiteWebAppInstall.js  EmbedPrefService.js  GeoProtocolHandler.js  HelperAppDialog.js  LoginManagerPrompter.js  MailtoProtocolHandler.js  Makefile.am  PrivateDataManager.js  PromptService.js  RtspProtocolHandler.js  SessionStore.js  Sidebar.js  SmsProtocolHandler.js  TelProtocolHandler.js  UserAgentOverrideHelper.js  XPIDialogService.js
jsscripts/: ContextMenuHandler.js  EmbedLiteJSScripts.manifest  Makefile.am  SelectAsyncHelper.js  SelectHelper.js  SelectionHandler.js  Util.js  baidu.xml  duckduckgo.xml  embedhelper.js  startpage.xml  yandex.xml
jsscripts/sync/: bookmarks.js
overrides/: EmbedLiteOverrides.manifest  Makefile.am  brand.properties  netError.css  netError.xhtml  touchcontrols.css
prompt/: EmbedPromptRegister.cpp  EmbedPromptRegister.h  EmbedPromptService.cpp  EmbedPromptService.h  GenericFactory.cpp  GenericFactory.h  Makefile.am  nsAlertsService.cpp  nsAlertsService.h  nsEmbedChildModule.cpp
rpm/: embedlite-components-qt5.spec  embedlite-components.spec
tests/htmltests/: login.html  select.html
touchhelper/: EmbedTouchListener.cpp  EmbedTouchListener.h  EmbedTouchManager.cpp  EmbedTouchManager.h  Makefile.am  nsEmbedTouchModule.cpp
widgetfactory/: EmbedWidgetFactoryRegister.cpp  EmbedWidgetFactoryRegister.h  EmbedliteGenericFactory.h  GenericFactory.cpp  Makefile.am  nsClipboard.cpp  nsClipboard.h  nsFilePicker.cpp  nsFilePicker.h
