jscomps_manifestdir=$(libdir)/mozembedlite/components
jscomps_manifest_DATA = \
	EmbedLiteJSComponents.manifest \
	AboutRedirector.js \
	AlertsService.js \
	LoginManagerPrompter.js \
	HelperAppDialog.js \
	DownloadManagerUI.js \
	EmbedPrefService.js \
	ContentPermissionPrompt.js \
	EmbedLiteGlobalHelper.js \
	$(NULL)

INCLUDES = $(DEPS_CFLAGS) 
