jsscripts_manifestdir=$(libdir)/mozembedlite/chrome/embedlite/content
jsscripts_manifest_DATA = \
	embedhelper.js \
	SelectHelper.js \
	bing.xml \
	google.xml \
	yahoo.xml \
	$(NULL)

manifestsscript_manifestdir=$(libdir)/mozembedlite/chrome
manifestsscript_manifest_DATA = \
	EmbedLiteJSScripts.manifest \
	$(NULL)

INCLUDES = $(DEPS_CFLAGS) 
