jsscripts_manifestdir=$(libdir)/mozembedlite/chrome/embedlite/content
jsscripts_manifest_DATA = \
	embedhelper.js \
	SelectHelper.js \
	SelectionHandler.js \
	Util.js \
	ContextMenuHandler.js \
	bing.xml \
	google.xml \
	yahoo.xml \
	$(NULL)

sync_engine_manifestdir=$(libdir)/mozembedlite/chrome/embedlite/content/sync
sync_engine_manifest_DATA = \
	sync/bookmarks.js \
	$(NULL)

manifestsscript_manifestdir=$(libdir)/mozembedlite/chrome
manifestsscript_manifest_DATA = \
	EmbedLiteJSScripts.manifest \
	$(NULL)

AM_CPPFLAGS = $(DEPS_CFLAGS)
