chromecontent_manifestdir=$(libdir)/mozembedlite/chrome/chrome/content
chromecontent_manifest_DATA = \
	aboutCertError.xhtml \
	netError.xhtml \
	$(NULL)

chromeskin_manifestdir=$(libdir)/mozembedlite/chrome/chrome/skin
chromeskin_manifest_DATA = \
	netError.css \
	$(NULL)

manifestsscript_manifestdir=$(libdir)/mozembedlite/chrome
manifestsscript_manifest_DATA = \
	EmbedLiteOverrides.manifest \
	$(NULL)

localebrand_manifestdir=$(libdir)/mozembedlite/chrome/en-US/locale/branding
localebrand_manifest_DATA = \
	brand.dtd \
	brand.properties \
	$(NULL)

localebrowser_manifestdir=$(libdir)/mozembedlite/chrome/en-US/locale/en-US/browser
localebrowser_manifest_DATA = \
	aboutCertError.dtd \
	netError.dtd \
	$(NULL)

AM_CPPFLAGS = $(DEPS_CFLAGS)
