chromecontent_manifestdir=$(libdir)/mozembedlite/chrome/chrome/content
chromecontent_manifest_DATA = \
	aboutCertError.xhtml \
	netError.xhtml \
	$(NULL)

chromeskin_manifestdir=$(libdir)/mozembedlite/chrome/chrome/skin
chromeskin_manifest_DATA = \
	netError.css \
	touchcontrols.css \
	$(NULL)

chromeskinimages_manifestdir=$(libdir)/mozembedlite/chrome/chrome/skin/images
chromeskinimages_manifest_DATA = \
	images/error.png \
	images/exitfullscreen-hdpi.png \
	images/fullscreen-hdpi.png \
	images/mute-hdpi.png \
	images/pause-hdpi.png \
	images/play-hdpi.png \
	images/scrubber-hdpi.png \
	images/throbber.png \
	images/unmute-hdpi.png \
	$(NULL)

manifestsscript_manifestdir=$(libdir)/mozembedlite/chrome
manifestsscript_manifest_DATA = \
	EmbedLiteOverrides.manifest \
	$(NULL)

localebrand_manifestdir=$(libdir)/mozembedlite/chrome/en-US/locale/branding
localebrand_manifest_DATA = \
	brand.dtd \
	brand.properties \
	$(NULL)

localebrowser_manifestdir=$(libdir)/mozembedlite/chrome/en-US/locale/en-US/browser
localebrowser_manifest_DATA = \
	aboutCertError.dtd \
	netError.dtd \
	$(NULL)

AM_CPPFLAGS = $(DEPS_CFLAGS)
